fix: Prevent stretching the image of a restaurant card

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,7 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
   border-radius: 40px 0 0 0;
+  object-fit: cover;
 }
 
 #restaurants-list li h1 {
